# Huffman

./: CMakeLists.txt  README.md  Template - Seminário.pptx
cunit_test/: Makefile  charpath.c  header.c  header.h  huffmantree.c  huffmantree.h  main.c
cunit_test/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
cunit_test/nbproject/private/: configurations.xml  private.xml
cunit_test/tests/: newcunittest.c  newcunittest1.c  newcunittest2.c  newcunittest3.c  newcunittest4.c  tests.c  tests2.c
huffman/: CMakeLists.txt  app  compressed.huff  main.c  makefile  testet.txt
huffman-terminal/: app  charpath.h  compressed.huff  header.c  header.h  huffmantree.c  huffmantree.h
huffman/inc/: charpath.h  header.h  huffmantree.h
huffman/src/: charpath.c  header.c  huffmantree.c
plot/: CMakeLists.txt  a.out  binary_tree_out.txt  main.c  y.c
plot/inc/: BinaryTree.h  LinkedList.h
plot/src/: BinaryTree.c  LinkedList.c
test_tad/: CMakeLists.txt  main.c
test_tad/src/: charpath.c  header.c  huffmantree.c
